--- a/minimum-vertex-cover.cabal
+++ b/minimum-vertex-cover.cabal
@@ -36,6 +36,9 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , deepseq
+    , parallel
+    , time
   default-language: Haskell2010
 
 executable minimum-vertex-cover-exe
@@ -50,7 +53,10 @@ executable minimum-vertex-cover-exe
   build-depends:
       base >=4.7 && <5
     , containers
+    , deepseq
     , minimum-vertex-cover
+    , parallel
+    , time
   default-language: Haskell2010
 
 test-suite minimum-vertex-cover-test
@@ -66,5 +72,9 @@ test-suite minimum-vertex-cover-test
   build-depends:
       base >=4.7 && <5
     , containers
+    , deepseq
+    , hspec
     , minimum-vertex-cover
+    , parallel
+    , time
   default-language: Haskell2010
