--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - containers
+- deepseq
+- parallel
+- time
 
 ghc-options:
 - -Wall
@@ -58,3 +61,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - minimum-vertex-cover
+    - hspec
