--- a/minimum-vertex-cover.cabal
+++ b/minimum-vertex-cover.cabal
@@ -25,7 +25,11 @@ source-repository head
 
 library
   exposed-modules:
+      Common
+      Incremental
       Lib
+      Parallel
+      Sequential
   other-modules:
       Paths_minimum_vertex_cover
   autogen-modules:
